Improved redirect + URL vs URI